added licence stuff at start of letter example

--- a/example-cover-letter.tex
+++ b/example-cover-letter.tex
@@ -1,3 +1,25 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Friggeri Cover Letter
+% XeLaTeX Template
+% Version 1.0 (1/11/15) 
+%
+% This template has been downloaded from:
+% https://github.com/mlda065/friggeri-letter
+%
+% Original author:
+% Matthew Davis, based on code by 
+% Adrien Friggeri (adrien@friggeri.net)
+% https://github.com/afriggeri/CV
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+% 
+% Important notes:
+% This template needs to be compiled with XeLaTeX
+% You may need to compile twice for the header to appear.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \documentclass[a4paper,english]{friggeri-letter}
 \usepackage[latin9]{inputenc}
 
