--- a/friggeri-cv.cls
+++ b/friggeri-cv.cls
@@ -77,7 +77,7 @@
     \node [rectangle, fill=fillheader, anchor=north, minimum width=\paperwidth, minimum height=4cm] (box) at (current page.north){};
     \node [anchor=center] (name) at (box) {%
       \fontsize{40pt}{72pt}\color{header}%
-      {\thinfont #1}{\bodyfont  #2}
+      {\thinfont #1 }~{\bodyfont #2}
     };
     \node [anchor=north] at (name.south) {%
       \fontsize{14pt}{24pt}\color{header}%
@@ -163,23 +163,30 @@
 % Side block %
 %%%%%%%%%%%%%%
 
+\RequirePackage{everypage}
+
 \RequirePackage[absolute,overlay]{textpos}
 \setlength{\TPHorizModule}{1cm}
 \setlength{\TPVertModule}{1cm}
-\newenvironment{aside}{%
-  \let\oldsection\section
-  \renewcommand{\section}[1]{
-    \par\vspace{\baselineskip}{\Large\headingfont\color{headercolor} ##1}
-  }
-  \begin{textblock}{3.6}(1.5, 4.33)
-  \begin{flushright}
-  \obeycr
-}{%
-  \restorecr
-  \end{flushright}
-  \end{textblock}
-  \let\section\oldsection
+
+\xdef\asideHeight{5}
+
+\newcommand\aside[2]{
+    \AddEverypageHook{
+        \begin{textblock}{3.6}(1.5, \asideHeight) % {width}(xpos,ypos)
+            \begin{flushright}
+            \linespread{1}\selectfont
+            {\Large\headingfont\color{headercolor} {#1}} \\
+            #2
+            \end{flushright}
+        \end{textblock}
+        %
+        %all pages aside from the first should have the side bit further up
+        %Crude hack to just redefine the y position as we go
+        \xdef\asideHeight{2}
+    }
 }
+
 
 %%%%%%%%%%%%%%%%
 % Bibliography %
@@ -318,6 +325,7 @@
 %%%%%%%%%%%%%%%%
 % Other tweaks %
 %%%%%%%%%%%%%%%%
+
 
 \RequirePackage[left=6.1cm,top=2cm,right=1.5cm,bottom=2.5cm,nohead,nofoot]{geometry}
 \RequirePackage{hyperref}
