added body command

--- a/example-resume.tex
+++ b/example-resume.tex
@@ -24,7 +24,7 @@
  
 
 \begin{document} 
-
+ 
 \header{John~}{Smith}{Professional Cool Guy} % Your name and current job title/field 
 
 %----------------------------------------------------------------------------------------
@@ -139,8 +139,9 @@ description
 {2012--2016}
 {Bachelor {\normalfont of Galvanic Engineering}}
 {The University of Earth}
-{Weighted Average Mark of 200.1\%} 
+{Weighted Average Mark of 200.1\%}
 {
+Thesis topic on something really cool. Electives include this, that and the other.
 }
 
 %------------------------------------------------
@@ -279,6 +280,17 @@ Blah blah blah
 {
 Contact details here
 }
+
+
+\entry
+{}
+{Name}
+{Company/Organisation}
+{Title}
+{
+Contact details here
+}
+
 \end{entrylist} 
 
 %----------------------------------------------------------------------------------------
