--- a/friggeri-letter.cls
+++ b/friggeri-letter.cls
@@ -60,7 +60,9 @@
 %%%%%%%%%
 
 \RequirePackage[quiet]{fontspec}
+% https://tex.stackexchange.com/questions/353136/compilation-error-option-unknown-unicode-math
 %\RequirePackage[math-style=TeX,vargreek-shape=unicode]{unicode-math} % https://tex.stackexchange.com/questions/353136/compilation-error-option-unknown-unicode-math
+\RequirePackage[]{unicode-math}
 
 \newfontfamily\bodyfont[]{Roboto-Regular}
 \newfontfamily\thinfont[]{Roboto-Thin}
