--- a/example-resume.tex
+++ b/example-resume.tex
@@ -20,10 +20,10 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
- 
+\documentclass[a4paper]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
 
-\begin{document} 
+
+\begin{document}
  
 \header{John~}{Smith}{Professional Cool Guy} % Your name and current job title/field 
 
@@ -268,6 +268,7 @@ Blah blah blah
 
 \end{entrylist}
 
+\newpage{} % force a new page, because LaTeX isn't doing its job
 
 %----------------------------------------------------------------------------------------
 %	References SECTION 
