--- a/friggeri-cv.cls
+++ b/friggeri-cv.cls
@@ -48,7 +48,9 @@
 %%%%%%%%%
 
 \RequirePackage[quiet]{fontspec}
-\RequirePackage[math-style=TeX,vargreek-shape=unicode]{unicode-math}
+% https://tex.stackexchange.com/questions/353136/compilation-error-option-unknown-unicode-math
+%\RequirePackage[math-style=TeX,vargreek-shape=unicode]{unicode-math} % https://tex.stackexchange.com/questions/353136/compilation-error-option-unknown-unicode-math
+\RequirePackage[]{unicode-math}
 
 \newfontfamily\bodyfont[]{Roboto-Regular}
 \newfontfamily\thinfont[]{Roboto-Thin}
