--- a/example-cover-letter.tex
+++ b/example-cover-letter.tex
@@ -1,25 +1,29 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Friggeri Cover Letter
 % XeLaTeX Template
-% Version 1.0 (1/11/15) 
+% Version 1.1 (24/12/18)
 %
 % This template has been downloaded from:
 % https://github.com/mlda065/friggeri-letter
 %
 % Original author:
-% Matthew Davis, based on code by 
+% Matthew Davis, based on code by
 % Adrien Friggeri (adrien@friggeri.net)
 % https://github.com/afriggeri/CV
 %
 % License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-% 
+% License:
+%    Copyright (C) 2012, Adrien Friggeri
+%    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+%    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+%    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+%
 % Important notes:
 % This template needs to be compiled with XeLaTeX
 % You may need to compile twice for the header to appear.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  
+
 \documentclass[a4paper,english]{friggeri-letter}
 
 \usepackage{babel}
@@ -28,29 +32,29 @@
 
 \header{John~}{Smith}{Professional Cool Guy}
 
-\address{ 
+\address{
    123 Fake St \\
    Australia
 }
 
 
-\letter{ 
-   Recipient's name \\ 
+\letter{
+   Recipient's name \\
    1234 Fake St \\
    New Zealand
-} 
+}
 
 
-   
-  
 
-\opening{Dear Name:} 
+
+
+\opening{Dear Name:}
 
 Explain why you want the job, and summarise why you deserve the job.
 
 
 \closing{
    Yours Sincerely\\
-   John Smith} 
+   John Smith}
 
 \end{document}
