--- a/example-resume.tex
+++ b/example-resume.tex
@@ -1,22 +1,25 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Friggeri Resume/CV
 % XeLaTeX Template
-% Version 1.2 (3/5/15) 
+% Version 1.3 (24/12/2018) 
 %
 % This template has been downloaded from:
 % https://github.com/mlda065/friggeri-letter
 %
-% Original author: 
+% Original author:
 % Adrien Friggeri (adrien@friggeri.net)
 % https://github.com/afriggeri/CV
 %
 % Modifications by Matthew Davis (matthew@mdavis.xyz)
 %
 % License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-% 
+%    Copyright (C) 2012, Adrien Friggeri
+%    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+%    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+%    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+%
 % Important notes:
-% This template needs to be compiled with XeLaTeX 
+% This template needs to be compiled with XeLaTeX
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -24,14 +27,14 @@
 
 
 \begin{document}
- 
-\header{John~}{Smith}{Professional Cool Guy} % Your name and current job title/field 
+
+\header{John~}{Smith}{Professional Cool Guy} % Your name and current job title/field
 
 %----------------------------------------------------------------------------------------
-%	SIDEBAR SECTION 
+%	SIDEBAR SECTION
 %----------------------------------------------------------------------------------------
 
- 
+
 \aside{
 \subsubsection{contact}
 %don't display the name in the contact details on the first page
@@ -56,9 +59,9 @@ Australia \\
 English \\
 Spanish \\
 Pig Latin
-} 
+}
 
- 
+
 
 
 
@@ -68,14 +71,14 @@ Pig Latin
 %----------------------------------------------------------------------------------------
 
 \section{Experience}
- 
+
 \subsection{Full Time}
 
 \begin{entrylist}
 
 %------------------------------------------------
 
-\entry 
+\entry
 {2012--Now}
 {Company}
 {Sydney}%side thing
@@ -95,10 +98,10 @@ job description
 
 \entry
 {2013-2015}
-{Company} 
+{Company}
 {side thing}
 {Job title}
-{ 
+{
 Description
 }
 
@@ -119,7 +122,7 @@ Description
 
 \entry
 {2012-Now}
-{Organisation name} 
+{Organisation name}
 {}
 {Role}
 {
@@ -138,7 +141,7 @@ description
 
 \section{Education}
 
-\begin{entrylist} 
+\begin{entrylist}
 
 %------------------------------------------------
 
@@ -154,10 +157,10 @@ Thesis topic on something really cool. Electives include this, that and the othe
 %------------------------------------------------
 
 \entry
-{2006--2011}  
+{2006--2011}
 {High School Certificate}
 {School name}
-{Mark} 
+{Mark}
 {
 }
 
@@ -178,8 +181,8 @@ Thesis topic on something really cool. Electives include this, that and the othe
 \entry
 {2015}
 {Awesome Award}
-{United Nations} 
-{} 
+{United Nations}
+{}
 {Awarded to the most awesome person in the world}
 
 %------------------------------------------------
@@ -271,7 +274,7 @@ Blah blah blah
 \newpage{} % force a new page, because LaTeX isn't doing its job
 
 %----------------------------------------------------------------------------------------
-%	References SECTION 
+%	References SECTION
 %----------------------------------------------------------------------------------------
 
 \section{References}
@@ -299,7 +302,7 @@ Contact details here
 Contact details here
 }
 
-\end{entrylist} 
+\end{entrylist}
 
 %----------------------------------------------------------------------------------------
 
